fix mobile spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -570,8 +570,8 @@ a {
 	padding: 1em 1em;
 	margin-top: 2em;
 	margin-bottom: 2em;
-	margin-left: 0.5em;
-	margin-right: 0.5em;
+	margin-left: 0.2em;
+	margin-right: 0.2em;
 	cursor: pointer;
 	transition: transform 0.6s ease-in-out, background 0.6s ease-in-out;
 }
@@ -624,6 +624,8 @@ a {
 @media (min-width: 400px) {
 	.project-container {
 		max-width: 100vw;
+		margin-left: 1em;
+		margin-right: 1em;
 	}
 	
 	.projects-subtitle {
